# Roots-and-Recipes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app_modules/: config.toml  display.py  forms.py  utils.py
data/: comments.csv  recipes.csv  recipes.db
streamlit/: forms.py  utils.py
